<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.bfh.ti.cloudexercise.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_value"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startSingleActivity"
        android:text="@string/launch_singleactivity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:id="@+id/main_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startComposerActivity"
        android:text="@string/launch_composeractivity" />

    <Button
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startViewerActivity"
        android:text="@string/launch_vieweractivity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lists"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startMessagesActivity"
        android:text="@string/launch_messagesactivity" />

</LinearLayout>
